footer on long pages

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -38,7 +38,7 @@
     {{{ body }}}
 </div>
 
-<footer style="overflow-x: auto">
+<footer style="overflow-x: auto;flex-shrink: 0">
     <div style="display: flex; gap: 8px; align-items: center;justify-content: safe flex-end;">
         <p style="white-space: nowrap">v1.4</p>
         <p>///</p>
