--- a/views/leaderboard.handlebars
+++ b/views/leaderboard.handlebars
@@ -13,7 +13,7 @@
 <div style="display: grid;place-content: center;">
     <h1 style="margin-block-end: 0">Los más listos</h1>
     <p>Quien tenga más puntos, gana.</p>
-    <table>
+    <table style="text-align: left">
         <thead>
         <tr>
             <th>#</th>
@@ -24,10 +24,10 @@
         </thead>
         {{#each leaderboard}}
             <tr>
-                <td>{{sum @index 1}}</td>
-                <td>{{this.username}}</td>
-                <td>{{this.submissionsLength}}</td>
-                <td>{{this.score}}</td>
+                <td style="max-width: 25ch; text-overflow: ellipsis; overflow: hidden">{{sum @index 1}}</td>
+                <td style="max-width: 25ch; text-overflow: ellipsis; overflow: hidden">{{this.username}}</td>
+                <td style="max-width: 25ch; text-overflow: ellipsis; overflow: hidden">{{this.submissionsLength}}</td>
+                <td style="max-width: 25ch; text-overflow: ellipsis; overflow: hidden">{{this.score}}</td>
             </tr>
         {{/each}}
     </table>
