--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -218,16 +218,19 @@ input:-webkit-autofill:active {
     }
 }
 
-.navbar {
+nav {
     position: sticky;
     top: 0px;
-    align-items: center;
-    display: flex;
     gap: 16px;
-    padding-block: 16px 32px;
-    justify-content: space-between;
-    background-color: var(--background);
     z-index: 2;
+}
+
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-block: 16px 32px;
+    background-color: var(--background);
 
     .login {
         display: flex;
