--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -221,13 +221,13 @@ input:-webkit-autofill:active {
 nav {
     position: sticky;
     top: 0px;
-    gap: 16px;
     z-index: 2;
 }
 
 .navbar {
     display: flex;
     align-items: center;
+    gap: 16px;
     justify-content: space-between;
     padding-block: 16px 32px;
     background-color: var(--background);
@@ -235,6 +235,7 @@ nav {
     .login {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         gap: 8px;
     }
 
